# SOTAforge

./: .env.secrets.template  .gitignore  .pre-commit-config.yaml  README.md  dodo.py  package-lock.json  pyproject.toml
frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ProgressPanel.tsx  ResultPanel.tsx
frontend/lib/: api.ts
src/sotaforge/: __init__.py  api.py  client.py  main.py
src/sotaforge/agents/: __init__.py  analyzer_server.py  db_agent.py  filter_agent.py  filter_server.py  orchestrator.py  parser_server.py  search_server.py  synthesizer_server.py
src/sotaforge/utils/: __init__.py  constants.py  dataclasses.py  db.py  errors.py  llm.py  logger.py  mail.py  parsing.py  prompts.py  utils.py
test/: conftest.py  test_analyzer_server.py  test_api.py  test_db.py  test_db_server.py  test_filter_server.py  test_llm.py  test_mail.py  test_models.py  test_orchestrator.py  test_parser_server.py  test_parsing.py  test_search_server.py  test_synthesizer_server.py  test_utils.py
