[project]
name = "sotaforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
main = "sotaforge.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"
exclude = ["__pycache__", ".venv", "build", "dist"]
lint.select = ["E", "F", "I", "D"]
lint.ignore = ["D203", "D213"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
plugins = []
mypy_path = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0,<4.0.0",
    "pytest>=9.0.1,<10.0.0",
    "ruff>=0.14.1,<1.0.0",
    "mypy>=1.18.2,<2.0.0",
    "doit>=0.36.0,<1.0.0",
    "types-requests>=2.32.4.20250913",
]

