[project]
name = "sotaforge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.1",
    "mcp>=1.22.0",
    "openai>=2.8.1",
    "requests>=2.32.0",
    "trafilatura>=1.6.0",
    "feedparser>=6.0.11",
    "docling>=2.0.0",
    "pydantic-ai>=0.0.14",
    "chromadb>=0.5.18",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
api = "sotaforge.api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"
exclude = ["__pycache__", ".venv", "build", "dist"]
lint.select = ["E", "F", "I", "D"]
lint.ignore = ["D203", "D213"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
plugins = []
mypy_path = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0,<4.0.0",
    "pytest>=9.0.1,<10.0.0",
    "ruff>=0.14.1,<1.0.0",
    "mypy>=1.18.2,<2.0.0",
    "doit>=0.36.0,<1.0.0",
    "types-requests>=2.32.4.20250913",
]

