[project]
name = "sotaforge"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.1",
    "mcp>=1.22.0",
    "openai>=2.8.1",
    "requests>=2.32.0",
    "trafilatura>=1.6.0",
    "feedparser>=6.0.11",
    "pymupdf>=1.24.0",
    "pydantic-ai>=0.0.14",
    "chromadb>=0.5.18",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
]

[project.scripts]
api = "sotaforge.api:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py312"
exclude = ["__pycache__", ".venv", "build", "dist"]
lint.select = ["E", "F", "I", "D"]
lint.ignore = ["D203", "D213"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true
plugins = []
mypy_path = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=3.8.0,<4.0.0",
    "pytest>=9.0.1,<10.0.0",
    "ruff>=0.14.1,<1.0.0",
    "mypy>=1.18.2,<2.0.0",
    "doit>=0.36.0,<1.0.0",
    "types-requests>=2.32.4.20250913",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "online: tests that require internet connectivity (deselect with '-m \"not online\"')",
    "slow: tests that take a long time to run (deselect with '-m \"not slow\"')",
    "integration: integration tests (deselect with '-m \"not integration\"')",
]
# Exclude online/slow tests by default in pre-commit
addopts = "-v --strict-markers"

